Fix table th-td alignment + remove unneeded table (H1) header

--- a/css/site-custom/stylesheet.scss
+++ b/css/site-custom/stylesheet.scss
@@ -97,6 +97,9 @@ h6 {
 h2{
   background: $color-primary-1;
 }
+#comparison-operators{
+background: lighten($color-primary-1, 15%);
+}
 
 a {
   color: $fg;
@@ -130,6 +133,9 @@ footer {
 
 p {
   background: lighten($bg, 10%);
+}
+p.info-box {
+margin: 1ex 0 0 0;
 }
 
 .button.button-primary,
@@ -166,6 +172,7 @@ input[type="button"].button-primary:focus {
   background: -webkit-linear-gradient(#eee, #333);
   -webkit-background-clip: text;
   text-shadow: 6px $black;
+  font-size: 6rem;
 }
 
 // ----------------------------------------------
@@ -290,7 +297,7 @@ footer {
     box-sizing: border-box;
     font-family: 'PT Mono', serif;
     font-weight: 300;
-    margin: 0 auto .25rem;
+    margin: 0 auto .25rem 0;
     text-align: center;
     width: 100%;
   }
@@ -315,7 +322,7 @@ footer {
     font-size: 3rem;
     letter-spacing: -.1rem;
     line-height: 1.3;
-    margin-top: 2.2rem;
+    margin-top: 2rem;
   }
 
   h4 {
@@ -723,13 +730,10 @@ footer {
   th,
   td {
     border-bottom: 1px dashed $color-border;
-    padding: 2px 15px;
+    padding: 2px 6px;
     text-align: left;
   }
 
-  th {
-    padding-left: 1rem;
-  }
   th:last-child,
   td:last-child {
     padding-right: 0;
